--- a/valuetransfer/src/main/res/values/themes.xml
+++ b/valuetransfer/src/main/res/values/themes.xml
@@ -31,7 +31,7 @@
         <item name="android:colorBackground">?attr/colorPrimary</item>
         <item name="android:statusBarColor">?attr/colorPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="23">true</item>
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+        <item name="android:navigationBarColor">@color/black</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
         <item name="actionBarStyle">@style/ActionBar</item>
         <item name="actionOverflowMenuStyle">@style/OptionsMenu</item>
