--- a/data-vault/src/main/res/layout/access_control_management_fragment.xml
+++ b/data-vault/src/main/res/layout/access_control_management_fragment.xml
@@ -20,6 +20,14 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:textSize="15sp"/>
 
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/ic_delete_red"/>
+
         <LinearLayout
             android:id="@+id/metadataLayout"
             android:layout_width="wrap_content"
