--- a/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
+++ b/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
@@ -86,7 +86,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="#8f8c83"
+                app:tint="#8f8c83"
                 app:srcCompat="@drawable/ic_baseline_search_24" />
 
             <EditText
