--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
     android:label="DeToks"
-    app:startDestination="@id/detoksFragment">
+    app:startDestination="@id/test_fragment_layoutid">
 
     <fragment
-        android:id="@+id/detoksFragment"
-        android:name="nl.tudelft.trustchain.detoks.DeToksFragment"
+        android:id="@+id/test_fragment_layoutid"
+        android:name="nl.tudelft.trustchain.detoks.test_fragment"
         android:label="DeToks">
     </fragment>
 </navigation>
