--- a/detoks/src/main/res/layout/item_video.xml
+++ b/detoks/src/main/res/layout/item_video.xml
@@ -43,7 +43,6 @@
             android:orientation="horizontal">
 
 
-
             <Button
                 android:id="@+id/like_button"
                 android:layout_width="wrap_content"
@@ -73,10 +72,10 @@
             android:textStyle="bold" />
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/txtDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:paddingStart="5dp"
             android:paddingTop="5dp"
             android:paddingEnd="5dp"
@@ -86,6 +85,11 @@
             android:shadowRadius="15"
             android:textColor="@android:color/white"
             android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/peerCount"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
