--- a/detoks-uvt/src/main/res/layout/fragment_detoks.xml
+++ b/detoks-uvt/src/main/res/layout/fragment_detoks.xml
@@ -3,11 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPagerVideos"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 </FrameLayout>
