--- a/detoks/src/main/res/layout/fragment_detoks.xml
+++ b/detoks/src/main/res/layout/fragment_detoks.xml
@@ -9,5 +9,22 @@
         android:id="@+id/viewPagerVideos"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="487dp"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="1300px"/>
+        <Button
+            android:text="Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/button2" android:onClick="doStuff"
+        />
+        <TextView
+            android:text="Bullshit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/textView"/>
+    </LinearLayout>
 </FrameLayout>
