Progress with basic transactions

--- a/detoks/src/main/res/layout/test_fragment_layout.xml
+++ b/detoks/src/main/res/layout/test_fragment_layout.xml
@@ -11,41 +11,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Testing!"
+        android:text="Experimental"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/privateKeyStatus"
+        android:id="@+id/benchmarkStatusTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@id/privateKeyValue"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testingTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/publicKeyTextView" />
 
     <TextView
-        android:id="@+id/privateKeyValue"
+        android:id="@+id/benchmarkCounterTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="8dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/benchmarkStatusTextView"
+        app:layout_constraintTop_toBottomOf="@+id/publicKeyTextView" />
+
+    <TextView
+        android:id="@+id/publicKeyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/privateKeyStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/testingTextView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/peerListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="5dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toTopOf="@+id/proposalsListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/privateKeyValue" />
+        app:layout_constraintTop_toBottomOf="@+id/benchmarkStatusTextView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/proposalsListView"
