--- a/detoks/src/main/res/layout/discovered_peer_item.xml
+++ b/detoks/src/main/res/layout/discovered_peer_item.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:clickable="false">
+    android:clickable="false"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/pkTextview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:clickable="true"
         android:focusable="true"
         android:text="default"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/initializeTransactionButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,24 +24,31 @@
         android:id="@+id/initializeTransactionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="8dp"
         android:clickable="true"
         android:focusableInTouchMode="false"
         android:text="Create transaction"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/pkTextview"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/button1000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/initializeTransactionButton" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="Press the button to initialize a transaction with this public key. The counterparty will be notified of the proposal and can manually confirm the transaction."
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="8dp"
+        android:text="Create a single transaction or run a benchmark with 1000 transactions per second. "
+        app:layout_constraintEnd_toStartOf="@id/button1000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pkTextview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
