--- a/detoks/src/main/res/layout/incoming_proposal_layout.xml
+++ b/detoks/src/main/res/layout/incoming_proposal_layout.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/proposalSenderTextview"
-        android:layout_width="64dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="TextView"
@@ -36,12 +36,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/proposalSenderTextview" />
 
+    <TextView
+        android:id="@+id/proposalMessageTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/blockTypeTextView" />
+
     <Button
         android:id="@+id/confirmProposalButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Confirm proposal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/proposalMessageTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
