--- a/detoks/src/main/res/layout/item_video.xml
+++ b/detoks/src/main/res/layout/item_video.xml
@@ -16,10 +16,10 @@
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -31,30 +31,41 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="224dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.65">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/like_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@null"
+            android:contentDescription="Like"
+            android:src="@drawable/baseline_favorite_24_white" />
 
+        <TextView
+            android:id="@+id/like_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="# Likes"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
 
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/like_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_weight="1"
-                android:text="Like"
-                android:translationZ="100px" />
-        </RelativeLayout>
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/txtTitle"
@@ -62,8 +73,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingStart="5dp"
-            android:paddingTop="5dp"
             android:paddingEnd="5dp"
+            android:paddingBottom="5dp"
             android:shadowColor="@android:color/black"
             android:shadowDx="0"
             android:shadowDy="0"
@@ -73,13 +84,13 @@
             android:textStyle="bold" />
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/txtDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:paddingStart="5dp"
-            android:paddingTop="5dp"
             android:paddingEnd="5dp"
+            android:paddingBottom="5dp"
             android:shadowColor="@android:color/black"
             android:shadowDx="0"
             android:shadowDy="0"
