--- a/detoks/src/main/res/layout/fragment_detoks.xml
+++ b/detoks/src/main/res/layout/fragment_detoks.xml
@@ -7,7 +7,18 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPagerVideos"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
+
+    <Button
+        android:id="@+id/button_offline"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_gravity="right"
+        android:text="Send"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </FrameLayout>
