--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     android:label="DeToks"
     app:startDestination="@id/detoksFragment">
@@ -9,5 +10,14 @@
         android:id="@+id/detoksFragment"
         android:name="nl.tudelft.trustchain.detoks.DeToksFragment"
         android:label="DeToks">
+        <action
+            android:id="@+id/action_detoksFragment_to_offlineTransferFragment"
+            app:destination="@id/offlineTransferFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/offlineTransferFragment"
+        android:name="nl.tudelft.trustchain.detoks.OfflineTransferFragment"
+        android:label="fragment_offline_transfer"
+        tools:layout="@layout/fragment_offline_transfer" />
+
 </navigation>
