--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -3,12 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
     android:label="DeToks"
-    app:startDestination="@id/exampleOverlayFragment">
+    app:startDestination="@id/TestFragment">
 
     <fragment
         android:id="@+id/detoksFragment"
         android:name="nl.tudelft.trustchain.detoks.DeToksFragment"
         android:label="DeToks">
+    </fragment>
+
+    <fragment
+        android:id="@+id/TestFragment"
+        android:name="nl.tudelft.trustchain.detoks.TestFragment"
+        android:label="TestFragment">
     </fragment>
 
     <fragment
