--- a/detoks/src/main/res/layout/popup_servers.xml
+++ b/detoks/src/main/res/layout/popup_servers.xml
@@ -3,10 +3,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#88000000">
-
+    android:background="#FFFFFF">
 
     <TextView
+        android:id="@+id/slay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
