showing walkable + WAN + LAN in popup

--- a/detoks/src/main/res/layout/popup_servers.xml
+++ b/detoks/src/main/res/layout/popup_servers.xml
@@ -1,16 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#FFFFFF">
 
     <TextView
-        android:id="@+id/slay"
-        android:layout_width="match_parent"
+        android:id="@+id/text_popup"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="Popup text goes here"/>
+        android:text="..."/>
 
     <Button
         android:id="@+id/close_button"
